[package]
authors = ["sunli <scott_s829@163.com>"]
categories = ["network-programming", "asynchronous"]
description = "async-graphql for poem"
documentation = "https://docs.rs/async-graphql-poem/"
edition = "2021"
homepage = "https://github.com/async-graphql/async-graphql"
keywords = ["futures", "async", "graphql", "poem"]
license = "MIT OR Apache-2.0"
name = "async-graphql-poem"
repository = "https://github.com/async-graphql/async-graphql"
version = "7.0.16"

[dependencies]
async-graphql.workspace = true

futures-util = { workspace = true, default-features = false }
poem = { version = "3.0.0", features = ["websocket"] }
serde_json.workspace = true
tokio-util = { workspace = true, default-features = false, features = [
    "compat",
] }
mime = "0.3.17"
tokio = { version = "1.36.0", features = ["time"] }
tokio-stream = "0.1.15"
http = "1.1.0"
