[package]
authors = ["sunli <scott_s829@163.com>"]
categories = ["network-programming", "asynchronous"]
description = "async-graphql for poem"
documentation = "https://docs.rs/async-graphql-poem/"
edition = "2024"
homepage = "https://github.com/async-graphql/async-graphql"
keywords = ["futures", "async", "graphql", "poem"]
license = "MIT OR Apache-2.0"
name = "async-graphql-poem"
repository = "https://github.com/async-graphql/async-graphql"
version = "7.0.17"

[dependencies]
async-graphql.workspace = true

futures-util = { workspace = true, default-features = false }
poem = { version = "3.1.12", features = ["websocket"] }
serde_json.workspace = true
tokio-util = { workspace = true, default-features = false, features = [
    "compat",
] }
mime = "0.3.17"
tokio = { version = "1.47.1", features = ["time"] }
tokio-stream = "0.1.17"
http = "1.3.1"
