[package]
name = "async-graphql-rocket"
version = "3.0.26"
authors = ["Daniel Wiesenberg <daniel@simplificAR.io>"]
edition = "2021"
description = "async-graphql for Rocket.rs"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/async-graphql/"
homepage = "https://github.com/async-graphql/async-graphql"
repository = "https://github.com/async-graphql/async-graphql"
keywords = ["futures", "async", "graphql", "rocket"]
categories = ["network-programming", "asynchronous"]

[dependencies]
async-graphql = { path = "../..", version = "3.0.25" }

rocket = { version = "0.5.0-rc.1", default-features = false }
serde = "1.0.126"
serde_json = "1.0.64"
tokio-util = { version = "0.6.7", default-features = false, features = ["compat"] }
