[package]
authors = ["Daniel Wiesenberg <daniel@simplificAR.io>"]
categories = ["network-programming", "asynchronous"]
description = "async-graphql for Rocket.rs"
documentation = "https://docs.rs/async-graphql/"
edition = "2021"
homepage = "https://github.com/async-graphql/async-graphql"
keywords = ["futures", "async", "graphql", "rocket"]
license = "MIT/Apache-2.0"
name = "async-graphql-rocket"
repository = "https://github.com/async-graphql/async-graphql"
version = "5.0.5"

[dependencies]
async-graphql = { path = "../..", version = "5.0.4", default-features = false }

rocket = { version = "0.5.0-rc.2", default-features = false }
serde = "1.0.126"
serde_json = "1.0.64"
tokio-util = { version = "0.6.7", default-features = false, features = [
  "compat",
] }
