[package]
authors = ["Daniel Wiesenberg <daniel@simplificAR.io>"]
categories = ["network-programming", "asynchronous"]
description = "async-graphql for Rocket.rs"
documentation = "https://docs.rs/async-graphql/"
edition = "2021"
homepage = "https://github.com/async-graphql/async-graphql"
keywords = ["futures", "async", "graphql", "rocket"]
license = "MIT OR Apache-2.0"
name = "async-graphql-rocket"
repository = "https://github.com/async-graphql/async-graphql"
version = "6.0.1"

[dependencies]
async-graphql = { workspace = true }

rocket = { version = "0.5.0-rc.2", default-features = false }
serde.workspace = true
serde_json.workspace = true
tokio-util = { workspace = true, default-features = false, features = [
  "compat",
] }
