[package]
name = "async-graphql-tide"
version = "2.10.1"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"
description = "async-graphql for tide"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/async-graphql-tide/"
homepage = "https://github.com/async-graphql/async-graphql"
repository = "https://github.com/async-graphql/async-graphql"
keywords = ["futures", "async", "graphql"]
categories = ["network-programming", "asynchronous"]

[features]
default = ["websocket"]
websocket = ["tide-websockets"]

[dependencies]
async-graphql = { path = "../..", version = "=2.10.1" }
async-trait = "0.1.48"
futures-util = "0.3.13"
serde_json = "1.0.64"

tide = { version = "0.16.0", default-features = false, features = ["h1-server"] }
tide-websockets = { version = "0.4.0", optional = true }

[dev-dependencies]
# Surf lacks multipart support
reqwest = { version = "0.11.2", default-features = false, features = ["json", "multipart"] }
async-std = { version = "1.9.0", features = ["attributes", "tokio1"] }
serde_json = "1.0.64"
