[package]
authors = ["vkill <vkill.net@gmail.com>", "sunli <scott_s829@163.com>"]
categories = ["network-programming", "asynchronous"]
description = "async-graphql for tide"
documentation = "https://docs.rs/async-graphql-tide/"
edition = "2021"
homepage = "https://github.com/async-graphql/async-graphql"
keywords = ["futures", "async", "graphql"]
license = "MIT/Apache-2.0"
name = "async-graphql-tide"
repository = "https://github.com/async-graphql/async-graphql"
version = "4.0.0"

[features]
default = ["websocket"]
websocket = ["tide-websockets"]

[dependencies]
async-graphql = { path = "../..", version = "4.0.0" }

async-trait = "0.1.48"
futures-util = "0.3.0"
serde_json = "1.0.64"

tide = { version = "0.16.0", default-features = false, features = [
  "h1-server",
] }
tide-websockets = { version = "0.4.0", optional = true }

[dev-dependencies]
# Surf lacks multipart support
async-std = { version = "1.9.0", features = ["attributes", "tokio1"] }
reqwest = { version = "0.11.2", default-features = false, features = [
  "json",
  "multipart",
] }
serde_json = "1.0.64"
