[package]
authors = ["vkill <vkill.net@gmail.com>", "sunli <scott_s829@163.com>"]
categories = ["network-programming", "asynchronous"]
description = "async-graphql for tide"
documentation = "https://docs.rs/async-graphql-tide/"
edition = "2021"
homepage = "https://github.com/async-graphql/async-graphql"
keywords = ["futures", "async", "graphql"]
license = "MIT OR Apache-2.0"
name = "async-graphql-tide"
repository = "https://github.com/async-graphql/async-graphql"
version = "6.0.1"

[features]
default = ["websocket"]
websocket = ["tide-websockets"]

[dependencies]
async-graphql = { workspace = true }

async-trait.workspace = true
futures-util.workspace = true
serde_json.workspace = true

tide = { version = "0.16.0", default-features = false, features = [
  "h1-server",
] }
tide-websockets = { version = "0.4.0", optional = true }

[dev-dependencies]
# Surf lacks multipart support
async-std = { version = "1.9.0", features = ["attributes", "tokio1"] }
reqwest = { version = "0.11.2", default-features = false, features = [
  "json",
  "multipart",
] }
serde_json.workspace = true
