[package]
name = "async-graphql-warp"
version = "3.0.0-alpha.2"
authors = ["sunli <scott_s829@163.com>", "Koxiaet"]
edition = "2021"
description = "async-graphql for warp"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/async-graphql-warp/"
homepage = "https://github.com/async-graphql/async-graphql"
repository = "https://github.com/async-graphql/async-graphql"
keywords = ["futures", "async", "graphql"]
categories = ["network-programming", "asynchronous"]

[dependencies]
async-graphql = { path = "../..", version = "=3.0.0-alpha.2" }

warp = { version = "0.3.0", default-features = false, features = ["websocket"] }
futures-util = { version = "0.3.13", default-features = false, features = ["sink"] }
serde_json = "1.0.64"

[dev-dependencies]
tokio = { version = "1.4.0", default-features = false, features = ["macros", "rt-multi-thread", "time"] }
async-stream = "0.3.0"
