[package]
authors = ["sunli <scott_s829@163.com>", "Koxiaet"]
categories = ["network-programming", "asynchronous"]
description = "async-graphql for warp"
documentation = "https://docs.rs/async-graphql-warp/"
edition = "2024"
homepage = "https://github.com/async-graphql/async-graphql"
keywords = ["futures", "async", "graphql"]
license = "MIT OR Apache-2.0"
name = "async-graphql-warp"
repository = "https://github.com/async-graphql/async-graphql"
version = "7.2.0"

[dependencies]
async-graphql.workspace = true

futures-util = { workspace = true, default-features = false, features = [
  "sink",
] }
serde_json.workspace = true
warp = { version = "0.3.6", default-features = false, features = ["websocket"] }

[dev-dependencies]
asynk-strim = "0.1.5"
warp = { version = "0.4.2", features = ["server"] }
tokio = { version = "1.36.0", default-features = false, features = [
  "macros",
  "rt-multi-thread",
  "time",
] }
